--- a/index.html
+++ b/index.html
@@ -9,166 +9,123 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
         }
-        /* Adding a subtle animation for sections to fade in as you scroll */
-        .fade-in-section {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-        }
-        .is-visible {
-            opacity: 1;
-            transform: translateY(0);
+        .story-block {
+            background-color: #ffffff;
+            border-radius: 0.75rem;
+            padding: 2rem;
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
         }
     </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="text-gray-800">
 
-    <div class="container mx-auto px-4 py-8 md:py-16">
+    <div class="container mx-auto max-w-3xl px-4 py-8 md:py-12">
 
         <!-- Main Title -->
-        <header class="text-center mb-12 md:mb-20">
-            <h1 class="text-4xl md:text-6xl font-bold text-gray-900">Eleanor's Quiet Revolution</h1>
-            <p class="text-lg md:text-xl text-gray-600 mt-2">A Story of Rediscovering Clarity</p>
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-900">Eleanor's Quiet Revolution</h1>
         </header>
 
-        <!-- Story Sections -->
-        <div class="max-w-4xl mx-auto space-y-16">
+        <!-- Story Content -->
+        <div class="space-y-12">
 
-            <!-- Section 1: The Overwhelmed Professional -->
-            <section class="fade-in-section">
-                <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <h2 class="text-2xl font-bold mb-4 text-gray-900 text-center">The Overwhelmed Professional</h2>
-                    <div class="flex flex-col md:flex-row items-center gap-8">
-                        <div class="md:w-1/2">
-                            <img src="https://placehold.co/600x400/d1d5db/374151?text=Stressed+at+Desk" alt="Eleanor looking stressed at her desk" class="rounded-lg shadow-md w-full">
-                        </div>
-                        <div class="md:w-1/2">
-                            <p class="text-gray-700 leading-relaxed">
-                                Eleanor’s life was a constant, buzzing hum of anxiety. As a project manager, her days were a blur of notifications, urgent emails, and the relentless pressure of deadlines. Her own creative projects gathered dust, and her world felt muted, as if the color had been slowly drained from everything. She was running on a treadmill of stress, and the off switch was nowhere in sight.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            <!-- Cover Image -->
+            <div class="story-block">
+                <h2 class="text-2xl font-bold text-center mb-4">Cover</h2>
+                <img src="elenor cover.png" alt="Eleanor looking serene over a city skyline" class="rounded-lg shadow-md w-full">
+            </div>
 
-            <!-- Section 2: The Breaking Point -->
-            <section class="fade-in-section">
-                <div class="flex flex-col md:flex-row-reverse items-center gap-8">
-                    <div class="md:w-1/2">
-                        <img src="https://placehold.co/600x400/d1d5db/374151?text=Breaking+Point" alt="Eleanor looking panicked and overwhelmed" class="rounded-lg shadow-xl w-full">
-                    </div>
-                    <div class="md:w-1/2">
-                        <h2 class="text-2xl font-bold mb-4 text-gray-900">The Breaking Point</h2>
-                        <p class="text-gray-700 leading-relaxed">
-                            One Monday, the hum crescendoed into a roar. A major project she was leading hit a critical, unforeseen snag. The panic was like a physical weight on her chest. That night, sleep offered no escape. She felt stuck, not just in her job, but in a life that felt like it was happening to her. She needed more than a vacation; she needed a new perspective.
-                        </p>
-                    </div>
-                </section>
+            <!-- Section 1 -->
+            <div class="story-block">
+                <img src="image1.png" alt="Eleanor looking overwhelmed at her desk" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                    Eleanor’s life was a constant, buzzing hum of anxiety. As a project manager, her days were a blur of notifications, urgent emails, and the relentless pressure of deadlines. Her own creative projects gathered dust, and her world felt muted, as if the color had been slowly drained from everything. She was running on a treadmill of stress, and the off switch was nowhere in sight.
+                </p>
+            </div>
 
-            <!-- Section 3: A Glimmer of Hope -->
-            <section class="fade-in-section">
-                 <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <h2 class="text-2xl font-bold mb-4 text-gray-900 text-center">A Glimmer of Hope</h2>
-                    <div class="flex flex-col md:flex-row items-center gap-8">
-                        <div class="md:w-1/2">
-                            <img src="https://placehold.co/600x400/d1d5db/374151?text=Finding+MicroDos(2)" alt="Eleanor discovering the MicroDos(2) website" class="rounded-lg shadow-md w-full">
-                        </div>
-                        <div class="md:w-1/2">
-                            <p class="text-gray-700 leading-relaxed">
-                                A friend had once mentioned microdosing. On a whim, Eleanor found the website: MicroDos(2). She read about Metocin (4-HO-MET) and its potential benefits: enhanced focus, increased creativity, and reduced anxiety. A spark of hope flickered. She ordered the trial pack.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            <!-- Section 2 -->
+            <div class="story-block">
+                <img src="image2.png" alt="Eleanor at her breaking point" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                    One Monday, the hum crescendoed into a roar. A major project she was leading hit a critical, unforeseen snag. The panic was like a physical weight on her chest. That night, sleep offered no escape. She felt stuck, not just in her job, but in a life that felt like it was happening to her. She needed more than a vacation; she needed a new perspective.
+                </p>
+            </div>
 
-            <!-- Section 4: The First Dose -->
-            <section class="fade-in-section">
-                <div class="flex flex-col md:flex-row-reverse items-center gap-8">
-                    <div class="md:w-1/2">
-                        <img src="https://placehold.co/600x400/d1d5db/374151?text=Preparing+First+Dose" alt="Eleanor preparing her first dose in a calm setting" class="rounded-lg shadow-xl w-full">
-                    </div>
-                    <div class="md:w-1/2">
-                        <h2 class="text-2xl font-bold mb-4 text-gray-900">The First Dose</h2>
-                        <p class="text-gray-700 leading-relaxed">
-                           The discreet package arrived. On a quiet Saturday morning, she prepared for her first dose, remembering the guide's advice. Set and setting were key, so she chose her calm, sunlit apartment. She started low, using a small splitter to divide one of the precisely scored tablets in half and took it with a full glass of water.
-                        </p>
-                    </div>
-                </section>
+            <!-- Section 3 -->
+            <div class="story-block">
+                <img src="image3.png" alt="Eleanor discovering the MicroDos(2) website" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                    A friend had once mentioned microdosing. On a whim, Eleanor found the website: MicroDos(2). She read about Metocin (4-HO-MET) and its potential benefits: enhanced focus, increased creativity, and reduced anxiety. A spark of hope flickered. She ordered the trial pack.
+                </p>
+            </div>
 
-            <!-- Section 5: The Shift -->
-            <section class="fade-in-section">
-                 <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <h2 class="text-2xl font-bold mb-4 text-gray-900 text-center">The Shift</h2>
-                    <div class="flex flex-col md:flex-row items-center gap-8">
-                        <div class="md:w-1/2">
-                           <img src="https://placehold.co/600x400/d1d5db/374151?text=Seeing+Colors+Again" alt="Eleanor looking at a painting with newfound appreciation" class="rounded-lg shadow-md w-full">
-                        </div>
-                        <div class="md:w-1/2">
-                            <p class="text-gray-700 leading-relaxed">
-                                An hour later, the change was subtle, yet profound. It wasn't a high; it was a hush. The frantic, buzzing hum in her head had simply… stopped. The anxiety receded, leaving a quiet space. She looked at the painting on her wall and saw the brushstrokes, the texture, the vibrant dance of colors she hadn't truly noticed in years.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            <!-- Section 4 -->
+            <div class="story-block">
+                <img src="image4.png" alt="Eleanor preparing her first dose" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                   The discreet package arrived. On a quiet Saturday morning, she prepared for her first dose, remembering the guide's advice. Set and setting were key, so she chose her calm, sunlit apartment. She started low, using a small splitter to divide one of the precisely scored tablets in half and took it with a full glass of water.
+                </p>
+            </div>
 
-            <!-- Section 6: Creative Breakthrough -->
-            <section class="fade-in-section">
-                <div class="flex flex-col md:flex-row-reverse items-center gap-8">
-                    <div class="md:w-1/2">
-                        <img src="https://placehold.co/600x400/d1d5db/374151?text=Creative+Breakthrough" alt="Eleanor having a creative breakthrough at work" class="rounded-lg shadow-xl w-full">
-                    </div>
-                    <div class="md:w-1/2">
-                        <h2 class="text-2xl font-bold mb-4 text-gray-900">Creative Breakthrough</h2>
-                        <p class="text-gray-700 leading-relaxed">
-                           With this newfound calm, she sat down with the problem from work. Instead of the usual panic, she felt a clear, gentle focus. She saw the project not as a tangled mess, but as a system of interconnected parts. A creative, elegant solution unfolded in her mind, a path she had been completely blind to before.
-                        </p>
-                    </div>
-                </section>
+            <!-- Section 5 -->
+            <div class="story-block">
+                <img src="image5.png" alt="Eleanor feeling the shift and seeing colors" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                    An hour later, the change was subtle, yet profound. It wasn't a high; it was a hush. The frantic, buzzing hum in her head had simply… stopped. The anxiety receded, leaving a quiet space. She looked at the painting on her wall and saw the brushstrokes, the texture, the vibrant dance of colors she hadn't truly noticed in years.
+                </p>
+            </div>
+            
+            <!-- Section 6 -->
+            <div class="story-block">
+                <img src="image6.png" alt="Eleanor having a creative breakthrough at work" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                   With this newfound calm, she sat down with the problem from work. Instead of the usual panic, she felt a clear, gentle focus. She saw the project not as a tangled mess, but as a system of interconnected parts. A creative, elegant solution unfolded in her mind, a path she had been completely blind to before.
+                </p>
+            </div>
 
-            <!-- Section 7: The New Eleanor -->
-            <section class="fade-in-section">
-                <div class="bg-white p-8 rounded-lg shadow-lg text-center">
-                    <h2 class="text-3xl font-bold mb-4 text-gray-900">A New Beginning</h2>
-                    <img src="https://placehold.co/800x400/d1d5db/374151?text=Confident+Presentation" alt="Eleanor confidently presenting to her team" class="rounded-lg shadow-xl w-full max-w-3xl mx-auto mb-8">
-                    <p class="text-gray-700 leading-relaxed max-w-2xl mx-auto mb-8">
-                        Weeks turned into months. Eleanor was no longer just surviving her life; she was living it. Her innovative solutions at work earned her recognition, but the real prize was internal. The constant, buzzing hum of anxiety had been replaced by quiet confidence. Microdosing didn't magically solve her problems. It quieted the noise, allowing her to access the focus, creativity, and calm she had within her all along.
-                    </p>
-                    <button class="bg-indigo-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
-                        Start Your Trial
-                    </button>
-                </div>
-            </section>
+            <!-- Section 7 -->
+            <div class="story-block">
+                <img src="image7.png" alt="Eleanor on a dose day" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                   She began a new routine, taking a dose every other day. On dose days, she experienced that same clarity and creative flow, allowing her to tackle her most challenging work with ease. The world seemed more vibrant, her thoughts more organized, her outlook more positive.
+                </p>
+            </div>
+
+            <!-- Section 8 -->
+            <div class="story-block">
+                <img src="image8.png" alt="Eleanor rediscovering her hobbies and painting on an off day" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                   The "off" days were just as transformative. The effects weren't a switch that flipped off; a sense of calm and clarity lingered. She found it easier to manage stress and stay present. The microdose wasn't a constant crutch; it was a tool that was teaching her a new way to operate.
+                </p>
+            </div>
+
+            <!-- Section 9 -->
+            <div class="story-block">
+                <img src="image9.png" alt="Eleanor presenting confidently to her team" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                   Weeks turned into months. Eleanor was no longer just surviving her life; she was living it. Her innovative solutions at work earned her recognition, but the real prize was internal. The constant, buzzing hum of anxiety had been replaced by quiet confidence. She was the one in control.
+                </p>
+            </div>
+
+            <!-- Section 10 -->
+            <div class="story-block">
+                <img src="image10.png" alt="Eleanor looking out at the city, serene and hopeful" class="rounded-lg shadow-md w-full mb-6">
+                <p class="text-gray-700 leading-relaxed text-lg">
+                   Microdosing didn't magically solve her problems. It quieted the noise, allowing her to access the focus, creativity, and calm she had within her all along. Her world was full of color again, not because something was added, but because she could finally see what was already there.
+                </p>
+            </div>
+
+            <!-- Call to Action -->
+            <div class="text-center pt-8">
+                 <a href="https://microdos2.github.io/UPDATE2/#pricing" target="_blank" rel="noopener noreferrer" class="inline-block bg-indigo-600 text-white font-bold py-4 px-10 text-lg rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
+                    Start Your Trial
+                </a>
+            </div>
 
         </div>
-
-        <!-- Footer -->
-        <footer class="text-center mt-16 text-gray-500">
-            <p>&copy; 2024 Your Company. All rights reserved.</p>
-        </footer>
-
     </div>
-
-    <script>
-        // This script adds a fade-in animation to sections as they become visible in the viewport.
-        const sections = document.querySelectorAll('.fade-in-section');
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('is-visible');
-                }
-            });
-        }, {
-            threshold: 0.1 // Trigger when 10% of the element is visible
-        });
-
-        sections.forEach(section => {
-            observer.observe(section);
-        });
-    </script>
 
 </body>
 </html>
