--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
             <!-- Cover Image -->
             <div class="story-block">
-                <h2 class="text-2xl font-bold text-center mb-4">Cover</h2>
-                <img src="elenor cover.png" alt="Eleanor looking serene over a city skyline" class="rounded-lg shadow-md w-full">
+                <h2 class="text-2xl font-bold text-center mb-4">Eleanor's Story</h2>
+                <img src="https://placehold.co/800x400/a3bffa/ffffff?text=Eleanor+Serene" alt="Eleanor looking serene over a city skyline" class="rounded-lg shadow-md w-full">
             </div>
 
             <!-- Section 1 -->
             <div class="story-block">
-                <img src="image1.png" alt="Eleanor looking overwhelmed at her desk" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/f87171/ffffff?text=Overwhelmed" alt="Eleanor looking overwhelmed at her desk" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
                     Eleanor’s life was a constant, buzzing hum of anxiety. As a project manager, her days were a blur of notifications, urgent emails, and the relentless pressure of deadlines. Her own creative projects gathered dust, and her world felt muted, as if the color had been slowly drained from everything. She was running on a treadmill of stress, and the off switch was nowhere in sight.
                 </p>
@@ -47,7 +47,7 @@
 
             <!-- Section 2 -->
             <div class="story-block">
-                <img src="image2.png" alt="Eleanor at her breaking point" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/ef4444/ffffff?text=Breaking+Point" alt="Eleanor at her breaking point" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
                     One Monday, the hum crescendoed into a roar. A major project she was leading hit a critical, unforeseen snag. The panic was like a physical weight on her chest. That night, sleep offered no escape. She felt stuck, not just in her job, but in a life that felt like it was happening to her. She needed more than a vacation; she needed a new perspective.
                 </p>
@@ -55,7 +55,7 @@
 
             <!-- Section 3 -->
             <div class="story-block">
-                <img src="image3.png" alt="Eleanor discovering the MicroDos(2) website" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/818cf8/ffffff?text=Discovery" alt="Eleanor discovering the MicroDos(2) website" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
                     A friend had once mentioned microdosing. On a whim, Eleanor found the website: MicroDos(2). She read about Metocin (4-HO-MET) and its potential benefits: enhanced focus, increased creativity, and reduced anxiety. A spark of hope flickered. She ordered the trial pack.
                 </p>
@@ -63,15 +63,15 @@
 
             <!-- Section 4 -->
             <div class="story-block">
-                <img src="image4.png" alt="Eleanor preparing her first dose" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/a78bfa/ffffff?text=Preparation" alt="Eleanor preparing her first dose" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                   The discreet package arrived. On a quiet Saturday morning, she prepared for her first dose, remembering the guide's advice. Set and setting were key, so she chose her calm, sunlit apartment. She started low, using a small splitter to divide one of the precisely scored tablets in half and took it with a full glass of water.
+                    The discreet package arrived. On a quiet Saturday morning, she prepared for her first dose, remembering the guide's advice. Set and setting were key, so she chose her calm, sunlit apartment. She started low, using a small splitter to divide one of the precisely scored tablets in half and took it with a full glass of water.
                 </p>
             </div>
 
             <!-- Section 5 -->
             <div class="story-block">
-                <img src="image5.png" alt="Eleanor feeling the shift and seeing colors" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/60a5fa/ffffff?text=The+Shift" alt="Eleanor feeling the shift and seeing colors" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
                     An hour later, the change was subtle, yet profound. It wasn't a high; it was a hush. The frantic, buzzing hum in her head had simply… stopped. The anxiety receded, leaving a quiet space. She looked at the painting on her wall and saw the brushstrokes, the texture, the vibrant dance of colors she hadn't truly noticed in years.
                 </p>
@@ -79,49 +79,49 @@
             
             <!-- Section 6 -->
             <div class="story-block">
-                <img src="image6.png" alt="Eleanor having a creative breakthrough at work" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/34d399/ffffff?text=Breakthrough" alt="Eleanor having a creative breakthrough at work" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                   With this newfound calm, she sat down with the problem from work. Instead of the usual panic, she felt a clear, gentle focus. She saw the project not as a tangled mess, but as a system of interconnected parts. A creative, elegant solution unfolded in her mind, a path she had been completely blind to before.
+                    With this newfound calm, she sat down with the problem from work. Instead of the usual panic, she felt a clear, gentle focus. She saw the project not as a tangled mess, but as a system of interconnected parts. A creative, elegant solution unfolded in her mind, a path she had been completely blind to before.
                 </p>
             </div>
 
             <!-- Section 7 -->
             <div class="story-block">
-                <img src="image7.png" alt="Eleanor on a dose day" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/2dd4bf/ffffff?text=New+Routine" alt="Eleanor on a dose day" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                   She began a new routine, taking a dose every other day. On dose days, she experienced that same clarity and creative flow, allowing her to tackle her most challenging work with ease. The world seemed more vibrant, her thoughts more organized, her outlook more positive.
+                    She began a new routine, taking a dose every other day. On dose days, she experienced that same clarity and creative flow, allowing her to tackle her most challenging work with ease. The world seemed more vibrant, her thoughts more organized, her outlook more positive.
                 </p>
             </div>
 
             <!-- Section 8 -->
             <div class="story-block">
-                <img src="image8.png" alt="Eleanor rediscovering her hobbies and painting on an off day" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/fbbf24/ffffff?text=Rediscovery" alt="Eleanor rediscovering her hobbies and painting on an off day" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                   The "off" days were just as transformative. The effects weren't a switch that flipped off; a sense of calm and clarity lingered. She found it easier to manage stress and stay present. The microdose wasn't a constant crutch; it was a tool that was teaching her a new way to operate.
+                    The "off" days were just as transformative. The effects weren't a switch that flipped off; a sense of calm and clarity lingered. She found it easier to manage stress and stay present. The microdose wasn't a constant crutch; it was a tool that was teaching her a new way to operate.
                 </p>
             </div>
 
             <!-- Section 9 -->
             <div class="story-block">
-                <img src="image9.png" alt="Eleanor presenting confidently to her team" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/4ade80/ffffff?text=Confidence" alt="Eleanor presenting confidently to her team" class="rounded-lg shadow-md w--full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                   Weeks turned into months. Eleanor was no longer just surviving her life; she was living it. Her innovative solutions at work earned her recognition, but the real prize was internal. The constant, buzzing hum of anxiety had been replaced by quiet confidence. She was the one in control.
+                    Weeks turned into months. Eleanor was no longer just surviving her life; she was living it. Her innovative solutions at work earned her recognition, but the real prize was internal. The constant, buzzing hum of anxiety had been replaced by quiet confidence. She was the one in control.
                 </p>
             </div>
 
             <!-- Section 10 -->
             <div class="story-block">
-                <img src="image10.png" alt="Eleanor looking out at the city, serene and hopeful" class="rounded-lg shadow-md w-full mb-6">
+                <img src="https://placehold.co/800x400/a3bffa/ffffff?text=Hopeful" alt="Eleanor looking out at the city, serene and hopeful" class="rounded-lg shadow-md w-full mb-6">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                   Microdosing didn't magically solve her problems. It quieted the noise, allowing her to access the focus, creativity, and calm she had within her all along. Her world was full of color again, not because something was added, but because she could finally see what was already there.
+                    Microdosing didn't magically solve her problems. It quieted the noise, allowing her to access the focus, creativity, and calm she had within her all along. Her world was full of color again, not because something was added, but because she could finally see what was already there.
                 </p>
             </div>
 
             <!-- Call to Action -->
             <div class="text-center pt-8">
                  <a href="https://microdos2.github.io/UPDATE2/#pricing" target="_blank" rel="noopener noreferrer" class="inline-block bg-indigo-600 text-white font-bold py-4 px-10 text-lg rounded-lg hover:bg-indigo-700 transition duration-300 shadow-lg transform hover:scale-105">
-                    Start Your Trial
-                </a>
+                     Start Your Trial
+                 </a>
             </div>
 
         </div>
